resources/rook/dashboard-ingress-https.yaml
#
# The nginx-ingress annotations support the dashboard
# running using HTTPS with a self-signed certificate
#
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ca-lacave-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
   - hosts:
     - cephdashboard.kube.lacave.info
     secretName: cephdashboard-kube-lacave-tls
  rules:
  - host: cephdashboard.kube.lacave.info
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: https-dashboard
